--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 
 <body>
     <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-      </div>
+        <div class="grid-item">Asheeka</div>
+        <div class="grid-item">Aakifah</div>
+        <div class="grid-item">Kyle</div>
+        <div class="grid-item">Zulkifl</div>
+        <div class="grid-item">Robin</div>
+        <div class="grid-item">Caleb</div>
+        <div class="grid-item">Keira</div>
+        <div class="grid-item">Matthew</div>
+        <div class="grid-item">Henry</div>
+    </div>
 </body>
 
 </html>
